<resources>
    <string name="app_name">Digi Repo</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter The OTP sent to</string>
    <string name="didn_t_received_the_otp">Didn\'t receive the OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="email">Email</string>
    <string name="reports">Reports</string>
    <string name="home">Home</string>
    <string name="issued_reports">Issued reports</string>
    <string name="x">X</string>
</resources>